--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for DirHandle
 
 {{$NEXT}}
+    - Bump dependency on opendir for 2024.12 Rakudo release
+    - Add sponsor button
+    - Add separate CI badge for each OS
+    - Update copyright year
 
 0.0.8  2023-08-07T18:55:33+02:00
     - Update test file extension
