--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@ Revision history for DirHandle
     - Add sponsor button
     - Add separate CI badge for each OS
     - Modernize pod
+    - Skip tests if CI / OS doesn't cooperate
     - Update copyright year
 
 0.0.8  2023-08-07T18:55:33+02:00
